[package]
edition = "2018"
name = "norm-email"
version = "0.1.0"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "strip email provider defined behaviour from email addresses"
repository = "https://github.com/orhanbalci/norm-email.git"
homepage = "https://github.com/orhanbalci"
keywords = ["emoji","unicode"]
license = "MIT"
readme = "README.md"
categories = ["text-processing"]


[dependencies]
anyhow = "1.0.44"
enumflags2 = "0.7.1"
lazy_static = "1.1.1"
trust-dns-resolver = "0.20.3"
thiserror = "1.0.30"

[dev-dependencies]
uuid = {version="*", features=["v4"]}

